refactor: resource -> controller
